--- a/stream-detective/src/app/sign-in/sign-in.component.css
+++ b/stream-detective/src/app/sign-in/sign-in.component.css
@@ -1,4 +1,21 @@
 
+:root {
+  --main-red: #c7493a;
+  --main-green: #689775;
+  --dark-tan: #917164;
+  --light-tan: #ad8174;
+  --main-white: rgba(245, 245, 245, 0.824);
+}
+
 input.ng-invalid.ng-touched {
   border: 1px solid red;
+}
+
+.card {
+  background-color: RGBA(104,151,117,0.85);
+
+}
+
+.card-header {
+  background-color: var(--main-white)
 }
