--- a/stream-detective/src/app/sign-in/sign-in.component.html
+++ b/stream-detective/src/app/sign-in/sign-in.component.html
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-2"></div>
   <div class="col-8">
-    <div class="card">
+    <div class="card my-2">
       <div class="card-header">
         <h5>
             Sign In
@@ -36,7 +36,7 @@
               name="password">
               <span class="help-block" *ngIf="!password.valid && password.touched">Enter password</span>
           </div>
-          <button class="btn btn-primary" type="submit" [disabled]="!form.valid" >Submit</button>
+          <button class="btn button-main" type="submit" [disabled]="!form.valid" >Submit</button>
         </form>
       </div>
     </div>
