--- a/stream-detective/src/app/sign-up/sign-up.component.html
+++ b/stream-detective/src/app/sign-up/sign-up.component.html
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-2"></div>
   <div class="col-8">
-    <div class="card">
+    <div class="card my-2">
       <div class="card-header">
         <h5>
             Sign Up
@@ -37,10 +37,9 @@
               ngModel>
               <span class="help-block" *ngIf="!password.valid && password.touched">Enter password</span>
           </div>
-          <button class="btn btn-primary" [disabled]="!form.valid">Submit</button>
+          <button class="btn button-main" [disabled]="!form.valid">Submit</button>
         </form>
       </div>
     </div>
   </div>
-  <div class="col-2"></div>
 </div>
