--- a/stream-detective/src/app/logged-in-mainpage/search/search.component.html
+++ b/stream-detective/src/app/logged-in-mainpage/search/search.component.html
@@ -1,1 +1,18 @@
-<p>search works!</p>
+<nav class="navbar navbar-light bg-light">
+  <form [formGroup]="reactiveForm"  (ngSubmit)="getSearchResults()">
+    <div class="form-group">
+      <label for="movieTitleSearchValue">Search for a Movie</label>
+      <input
+        type ="text"
+        class="form-control"
+        id = 'movieTitleSearchValue'
+        formControlName="movieTitleSearchValue">
+    </div>
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+  </form>
+  </nav>
+
+<h2>Search Results:</h2>
+<li *ngFor="let movie of movieTitleList">
+{{movie.name}}
+</li>`
