--- a/stream-detective/src/styles.css
+++ b/stream-detective/src/styles.css
@@ -2,8 +2,10 @@
 
 /* colors to reuse */
 
-@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Russo+One&display=swap');
-/* font-family: 'Russo One', sans-serif; */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&family=Russo+One&display=swap');
+/* 'Russo One' */
+/* 'Roboto' */
+
 
 :root {
   --main-red: #c7493a;
