footer and navbar
created a basic footer with attribution and styled navbar

--- a/stream-detective/src/app/shared/navbar/navbar.component.css
+++ b/stream-detective/src/app/shared/navbar/navbar.component.css
@@ -1,3 +1,15 @@
+nav {
+  background-color:rgb(95, 96, 98);
+}
+
+h3 {
+  color: var(--main-red);
+  font-family: 'Russo One', sans-serif;
+  background-color: #212529;
+  border-radius: 5px;
+
+}
+
 li {
   margin-right: 1em;
 }
@@ -9,4 +21,9 @@ a {
 #signOut {
   color: darkgray;
   background-color: #212529;
+}
+
+li.divider {
+  font-size: larger;
+  font-weight: 500;
 }
