--- a/stream-detective/src/app/shared/navbar/navbar.component.html
+++ b/stream-detective/src/app/shared/navbar/navbar.component.html
@@ -1,11 +1,12 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
-
+<nav class="navbar navbar-expand-lg navbar-dark">
+  <h3>Stream Detective</h3>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li role="presentation"
       routerLinkActive="active">
       <a [routerLink]="['./search']">Search</a>
       </li>
+      <li class="divider">|</li>
       <li role="presentation"
       routerLinkActive="active">
       <a [routerLink]="['./library']">Library</a>
