--- a/stream-detective/src/app/sign-up/sign-up.component.html
+++ b/stream-detective/src/app/sign-up/sign-up.component.html
@@ -37,7 +37,34 @@
               ngModel>
               <span class="help-block" *ngIf="!password.valid && password.touched">Enter password</span>
           </div>
-
+          <div class="form-group">
+            <label for="password">UserName</label>
+            <input
+              type="text"
+              class="form-control"
+              id="displayName"
+              placeholder="Enter display name"
+              name="displayName"
+              ngModel>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="netflix" value="netflix" ngModel name="netflix">
+            <label class="form-check-label" for="netflix">Netflix</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="hulu" value="hulu" ngModel name="hulu">
+            <label class="form-check-label" for="hulu">Hulu</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3" disabled>
+            <label class="form-check-label" for="inlineCheckbox3">3 (disabled)</label>
+          </div>
+          <!-- <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="netflix" ngModel name="netflix" value="Netflix">
+            <label class="form-check-label" for="netflix">
+               Netflix
+            </label>
+          </div> -->
           <button class="btn button-main" [disabled]="!form.valid">Submit</button>
         </form>
       </div>
