API Call Store to Obj & Library
-Attempted to assign JSON data from WatchlistAPI call to model UserLibraryData Obj that can be reused in application; still has some glitches, but overall found some success in this

-Implemented CREATE for watchlist: can add movie to logged in users database

-css styling for search and watchlist; watchlist results still glitchy

--- a/stream-detective/src/app/logged-in-mainpage/search/search.component.css
+++ b/stream-detective/src/app/logged-in-mainpage/search/search.component.css
@@ -1,14 +1,14 @@
-h2 {
-  color :aliceblue
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&family=Russo+One&display=swap');
+
+
 
 h3 {
-  color :aliceblue
+  font-family: 'Russo One';
+  margin-bottom: 0px;
+  color: var(--main-green);
+  text-shadow: 1px 4px 10px rgba(32, 32, 32, 0.6);
 }
 
-h4 {
-  color :aliceblue
-}
 
 ul
  {
@@ -19,3 +19,18 @@ ul
  .text{
   cursor: pointer;
  }
+
+ .bg-gray {
+  background-color: rgba(136, 141, 139, 0.569)
+ }
+
+ .roboto {
+  font-family: 'Roboto';
+ }
+
+ .white-text {
+  color: whitesmoke;
+ }
+
+
+
