--- a/stream-detective/src/app/logged-in-mainpage/user-library/user-library.component.html
+++ b/stream-detective/src/app/logged-in-mainpage/user-library/user-library.component.html
@@ -45,3 +45,12 @@
   </div>
 </div>
 
+<ul *ngFor="let movie of watchlist">
+  <li>
+    <div class="card">
+    {{movie.titleName}}
+    </div>
+  </li>
+
+</ul>
+
