--- a/stream-detective/src/app/logged-in-mainpage/search/search.component.html
+++ b/stream-detective/src/app/logged-in-mainpage/search/search.component.html
@@ -24,65 +24,22 @@
   </div>
   <div class="row">
     <div class="col-8">
-      <div id="accordion" *ngFor="let movie of movieTitleList; index as i">
+      <div id="accordion" *ngFor="let movie of movieWithAPIList; index as i">
         <div class="card" >
           <div class="card-header" id="headingOne">
             <h5 class="mb-0">
               <button class="btn btn-link" data-toggle="collapse" [attr.data-target]="'#collapse' + i" aria-expanded="false">
-                <span (click)="streamingServices = clickMovie(movie.id, movie.name)">{{movie.name}}</span>
+                <span (click)="streamingServices = clickMovie(movie.info.id, movie.info.name, i)">{{movie.info.name}}</span>
               </button>
               <button class="btn btn-secondary float-right" (click)="onAddToLibrary(userLibraryObject)">Add to Library</button>
             </h5>
           </div>
           <div class="collapse" [attr.id]="'collapse' + i">
             <div class="card-body">
-              <p *ngFor="let item of userLibraryObject.streamName">{{item}}</p>
+              <p *ngFor="let item of movie.sServices">{{item}}</p>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-
-
-
-
-  <!-- <div class="row">
-    <div class="col-8">
-      <div id="accordion" *ngFor="let movie of movieTitleList; index as i">
-        <div class="card" >
-          <div class="card-header" id="headingOne">
-            <h5 class="mb-0">
-              <button class="btn btn-link" data-toggle="collapse" [attr.data-target]="'#collapse' + i" aria-expanded="false">
-                <span (click)="streamingServices = clickMovie(movie.id, movie.name)">{{movie.name}}</span>
-              </button>
-              <button class="btn btn-secondary float-right" (click)="onAddToLibrary()">Add to Library</button>
-            </h5>
-          </div>
-          <div class="collapse" [attr.id]="'collapse' + i">
-            <div class="card-body">
-              <p *ngFor="let item of results">{{item.name}}</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-<h2>Search Results:</h2>
-<li *ngFor="let movie of movieTitleList">
-{{movie.name}}
-</li>
-<div>
-  <div *ngIf="titleClicked !== ''">
-    <h3> {{titleClicked}}</h3>
-    <h3> Streaming Services: </h3>
-    <h4 *ngFor="let item of results"> {{item.name}}</h4>
-  <br>
-</div>
-<ul class = "text movieList" *ngFor="let movie of movieTitleList">
-  <p (click)="streamingServices = clickMovie(movie.id, movie.name)">{{movie.name}}</p>
-</ul>
-</div>
-
-
