--- a/stream-detective/src/app/logged-in-mainpage/user-library/user-library.component.html
+++ b/stream-detective/src/app/logged-in-mainpage/user-library/user-library.component.html
@@ -3,40 +3,36 @@
     <div class="col-5">
       <h1>Watchlist Library</h1>
     </div>
-    <div class="col-3">
+    <!-- <div class="col-3">
       <div class="card my-3">
         FUTURE filter / query here
       </div>
-    </div>
+    </div> -->
   </div>
   <div class="row">
     <div class="col">
       <!-- START OF INDV. WATCHLIST CARD -->
       <div class="cards-grid">
-        <div class="card">
+        <div class="card" *ngFor="let movie of watchlist">
           <h5 class="card-header">
-            Movie/Series Title
+            {{movie.titleName}}
           </h5>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">
-              # Seasons
-            </li>
-            <li class="list-group-item">
-              # Episodes
+              <label for="watched" class="mx-2">Watched? </label>
+              <input type="checkbox" id="watched" [(ngModel)]="movie.watched" value="movie.watched" (change)="changeWatchStatus(movie, movie.watched)" class="my-0">
+              <!-- <input type="checkbox" id="watched" [ngModel]="changeWatchStatus(movie, movie.watched)"> -->
             </li>
           <!--STREAMING PLATFORM; list w/ ngIf-->
-            <li class="list-group-item">
-              <div class="badge badge-pill badge-primary mx-1">
-                Netflix
-              </div>
-              <div class="badge badge-pill badge-primary">
-                Hulu
-              </div>
+            <li class="list-group-item" >
+                <div class="badge badge-pill badge-primary mx-1"*ngFor="let stream of movie.streamName">
+                  {{stream}}
+                </div>
           <!-- END STREAMING PLATFORM NGIF -->
             </li>
           </ul>
           <div class="card-footer text-center">
-            <button class="btn button-secondary">Remove</button>
+            <button class="btn button-secondary" (click)="deleteMovie(movie)">Remove</button>
           </div>
         </div>
       </div>
@@ -45,12 +41,4 @@
   </div>
 </div>
 
-<ul *ngFor="let movie of watchlist">
-  <li>
-    <div class="card">
-    {{movie.titleName}}
-    </div>
-  </li>
-
-</ul>
 
