navbar and footer work
improved the functionality of the footer to move with results. styling for the navbar

--- a/stream-detective/src/styles.css
+++ b/stream-detective/src/styles.css
@@ -16,6 +16,12 @@
 html {
   background-image: url('https://images.pexels.com/photos/2387793/pexels-photo-2387793.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
   background-size:cover;
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  margin-bottom: 60px;
 }
 
 h1 {
