--- a/stream-detective/src/app/shared/footer/footer.component.css
+++ b/stream-detective/src/app/shared/footer/footer.component.css
@@ -2,20 +2,31 @@ footer {
   position: absolute;
   bottom: 0;
   left: 0;
+  right: 0;
   width: 100%;
-  height: 45px;
-  margin-top: auto;
+  height: 60px;
+  margin-top: 0;
+  margin: 0;
 
   background-color: rgb(95, 96, 98);
 }
 
-ul {
+/* footer{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  z-index: 999;
+} */
+
+li {
   text-align: center;
   list-style-type: none;
 }
 
 .container {
-  width: 31% ;
+margin-bottom: -60px;
 }
 
 #watchmode {
