--- a/stream-detective/src/app/shared/navbar/navbar.component.css
+++ b/stream-detective/src/app/shared/navbar/navbar.component.css
@@ -7,6 +7,8 @@ h3 {
   font-family: 'Russo One', sans-serif;
   background-color: #212529;
   border-radius: 5px;
+  text-align: center;
+  margin-bottom: 0;
 
 }
 
