Resolved Wrong Movie Added to Library List
As a user, when I click on the add to library for a movie, I expect the movie to be added to my library. Previously, a bug added the last movie clicked on, not the one next to add to library. This is resolved in this code

--- a/stream-detective/src/app/logged-in-mainpage/search/search.component.html
+++ b/stream-detective/src/app/logged-in-mainpage/search/search.component.html
@@ -40,7 +40,7 @@
                   <p *ngFor="let item of movie.sServices">{{item}}</p>
                 </div>
                 <div class="col">
-                  <button class="btn btn-secondary float-right" (click)="onAddToLibrary(userLibraryObject)">Add to Library</button>
+                  <button class="btn btn-secondary float-right" (click)="onAddToLibrary(i)">Add to Library</button>
                 </div>
               </div>
             </div>
