--- a/stream-detective/src/app/homepage/homepage.component.html
+++ b/stream-detective/src/app/homepage/homepage.component.html
@@ -10,7 +10,8 @@
   <div class="row text-center justify-content-center">
     <div class="col">
       <div class="card">
-        IMAGE HERE
+        <img src="https://media.istockphoto.com/photos/magnifying-glass-picture-id649182700?k=6&m=649182700&s=612x612&w=0&h=4r5LIeTaXkCxCHVZWhXHxBlZze-LFpJjDVsH5pwOG-k=">
+
       </div>
     </div>
     <div class="col">
