--- a/stream-detective/src/app/shared/navbar/navbar.component.html
+++ b/stream-detective/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
+  <img src="https://media.istockphoto.com/photos/magnifying-glass-picture-id649182700?k=6&m=649182700&s=612x612&w=0&h=4r5LIeTaXkCxCHVZWhXHxBlZze-LFpJjDVsH5pwOG-k=">
+
   <h3>Stream Detective</h3>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
     <ul class="navbar-nav ml-auto">
       <li role="presentation"
       routerLinkActive="active">
