--- a/stream-detective/src/app/shared/footer/footer.component.html
+++ b/stream-detective/src/app/shared/footer/footer.component.html
@@ -1,17 +1,92 @@
+<footer class="footer">
+  <div class="container-fluid">
+  <div class="row">
+    <div class="col-3">
+      <h5
+      id="github">Github</h5>
+      <ul
+      id="gitId">
+        <li
+        [routerLink]="" (click)="githubOne()">
+          Mary Anderson
+        </li>
+        <li
+        [routerLink]="" (click)="githubTwo()">
+          Cooper Myatt
+        </li>
+        <li
+        [routerLink]="" (click)="githubThree()">
+          Chad Capone
+        </li>
+      </ul>
+    </div>
 
-<footer>
-  <div class="container">
-    <ul>
-      <li>
-        Results provided by WATCHMODE
-      </li>
-      <li
-      id="watchmode"
-      style="cursor: pointer ;"
-      [routerLink]="" (click)="watchmode()">
-        WATCHMODE.com
-      </li>
-    </ul>
+    <div class="col-6">
+      <ul>
+        <li>
+          Results provided by WATCHMODE
+        </li>
+        <li
+        id="watchmode"
+        style="cursor: pointer ;"
+        [routerLink]="" (click)="watchmode()">
+          WATCHMODE.com
+        </li>
+      </ul>
+    </div>
+
+    <div class="col-3">
+      <h5
+      id="pss">Popular Streaming Services</h5>
+      <ul
+      id="streaming">
+        <li
+        [routerLink]="" (click)="streamingOne()">
+          Netflix
+        </li>
+        <li
+        [routerLink]="" (click)="streamingTwo()">
+          Amazon Prime Video
+        </li>
+        <li
+        [routerLink]="" (click)="streamingThree()">
+          Crunchyroll
+        </li>
+        <li
+        [routerLink]="" (click)="streamingFour()">
+          Disney+
+        </li>
+        <li
+        [routerLink]="" (click)="streamingFive()">
+          HBO Max
+        </li>
+      </ul>
+    </div>
   </div>
+</div>
 </footer>
 
+
+<!-- <ul>
+  <li>
+    Results provided by WATCHMODE
+  </li>
+  <li
+  id="watchmode"
+  style="cursor: pointer ;"
+  [routerLink]="" (click)="watchmode()">
+    WATCHMODE.com
+  </li>
+</ul> -->
+
+
+<!-- <div class=".col-3"
+    id="github">
+      <h5>Github</h5>
+      <div class=".col-6">
+        <h5>watchmode.com</h5>
+        <div class=".col-3">
+          <h5>Stream Services</h5>
+        </div>
+      </div>
+    </div> -->
