--- a/stream-detective/src/app/shared/footer/footer.component.css
+++ b/stream-detective/src/app/shared/footer/footer.component.css
@@ -4,11 +4,14 @@ footer {
   left: 0;
   right: 0;
   width: 100%;
-  height: 60px;
+  height: 150px;
   margin-top: 0;
   margin: 0;
-
   background-color: rgb(95, 96, 98);
+}
+
+.container-fluid {
+  text-align: center;
 }
 
 /* footer{
@@ -20,21 +23,46 @@ footer {
   z-index: 999;
 } */
 
+#github {
+  color: rgb(42, 43, 44);
+  text-align: center;
+  font-weight: bold;
+
+}
+
 li {
   text-align: center;
   list-style-type: none;
 }
 
 .container {
-margin-bottom: -60px;
+margin-bottom: -140px;
+}
+
+#gitId {
+  cursor: pointer;
+  font-family: 'Courier New', Courier, monospace;
+  font-style: italic;
+  text-align: center;
+  margin-right: 30px;
+  margin-top: 3px;
+  color: azure;
 }
 
 #watchmode {
   color: blue;
+  margin-top: 10px;
+  font-size: larger;
 }
 
-img {
+#pss {
+  color: rgb(42, 43, 44);
+  font-weight: bold;
+}
 
-  width: 45px;
-  height: 45px;
+#streaming {
+  cursor: pointer;
+  font-family: 'Courier New', Courier, monospace;
+  margin-right: 30px;
+  color: azure;
 }
